# xc3-party-copy

./: Cargo.toml  README.md
data/: accnames.txt  artnames.txt  gemnames.txt  gemnames4.txt  pcnames.txt  skillnames.txt  talentnames.txt
src/: main.rs
